# llm-boothcamp

./: LICENSE  README.md
lab_01_keyword_search/docs/notebooks/: 01_frequently_used_libraries.ipynb  02_tf_idf_search.ipynb  03_bm25_keyword_search.ipynb
lab_2_embedding_basics/: README.md  config.yaml  mkdocs.yml  pyproject.toml
lab_2_embedding_basics/docs/: index.md
lab_2_embedding_basics/docs/notebooks/: 00-conc-of-measures.ipynb  01-encoder-embeddings.ipynb  02-siglip-embeddings.ipynb  03-openai-chat-sample.ipynb
lab_2_embedding_basics/src/embedding_basics/: sv_ray_cluster_api.py
lab_3_contrastive_loss/contrastive_loss/: README.md  pyproject.toml  setup_env.sh
lab_4_vision_language_understanding/: README.md  config.yaml  pyproject.toml
lab_4_vision_language_understanding/docs/notebooks/: 00_vit_attention.ipynb  02_blip.ipynb  03_blip-2.ipynb  04_llava.ipynb  07_vllm_vl_call.ipynb  siglip2_trial.ipynb
lab_4_vision_language_understanding/docs/project-guide/: project-guide.md
lab_4_vision_language_understanding/src/svlearn_vlu/: vit_attention_maps.py
lab_4_vision_language_understanding/src/vision_language_understanding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sv_ray_cluster_access/sv_ray_cluster_access/: .env.example  README.md
sv_ray_cluster_access/sv_ray_cluster_access/src/: test_setup.py
week3/: week3_sentence_transformer_experiment.ipynb
week3/book_search/: README.md  requirements.txt
week3/book_search/data/: articles.csv  text_chunks.csv  week-3-experiment.csv
week3/book_search/src/: process_embeddings.py  search_api.py  (+1 more)
(+11 files in other folders)
