[project]
name = "embedding-basics"
version = "0.1.0"
description = "embedding_basics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "litellm>=1.81.9",
    "numpy<2.4",
    "sentence-transformers>=5.2.2",
    "svlearn-bootcamp>=0.1.7",
    "umap-learn>=0.5.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    # ... other includes like README, pyproject.toml, etc.
]

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_basics"]
